<resources>
    <string name="app_name">Darwin Tablet</string>

    <string name="prompt_email">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="userMotorista">Sou motorista</string>
    <string name="prompt_cpf">CPF</string>
    <string name="select_placa">Selecione uma placa:</string>
    <string name="veiculos">Veiculos</string>
    <string name="agreement">Eu declaro que todas as informações são verdadeiras</string>
    <string name="clear_pad">Limpar campo</string>
    <string name="save_signature">Salvar assinatura</string>
    <string name="check">Itens</string>
    <string name="general">Dados Gerais</string>
    <string name="status">Status</string>
    <string name="confirm">Finalização</string>
    <string name="sucessoSalvar">Assinatura Salva com sucesso</string>
    <string name="naoSalvar">Não foi possivel salvar a imagem</string>
    <string name="preenchimento">CheckList - Preenchimento</string>
    <string name="dataTeste">00/00/0000</string>
    <string name="anterior">Anterior</string>
    <string name="encerrar">Encerrar</string>
    <string name="m_dulo_check_list">Módulo: Check-List</string>
    <string name="pr_ximo">Próximo</string>
    <string name="salvar">Salvar</string>
    <string name="usuario_teste_apk_transportes">USER | Technolog</string>
    <string name="comentarios">Comentários</string>
    <string name="erroLogin">Usuario ou senha incorretos</string>
    <string name="erroLoginTitle">Não foi possivel logar</string>
    <string name="OK">OK</string>
    <string name="sync">Sincronizar</string>
    <string name="new_check">Novo CheckList</string>
    <string name="save_check">CheckList Salvos</string>
    <string name="checklist_modulo">Módulo: Checklist</string>
    <string name="select_modelo">Selecione o modelo de CheckList para a placa:</string>
    <string name="infos">Informações</string>
    <string name="infos2">Informações</string>
    <string name="ModelosCheck">Modelos CheckList</string>
    <string name="modulo_check">Módulo: Checklist</string>
    <string name="capturar_imagem">Capturar Imagem</string>
    <string name="textview"></string>
    <string name="efet">Efet.?</string>
    <string name="obs">Obs.</string>
    <string name="foto">Foto</string>
    <string name="ok">OK?</string>
    <string name="_0_de_20">0 de 0</string>
    <string name="upload">Enviar para o servidor</string>
    <string name="desc">Descrição:</string>
    <string name="mensagens_gerais">Mensagens gerais</string>
    <string name="placa">placa</string>
    <string name="no_ok">Não OK?</string>
    <string name="inicioviagem">Você deseja enviar o macro de inicio de viagem?</string>
    <string name="manobra">Você deseja enviar o macro de manobra?</string>
    <string name="manutencao">Você deseja enviar o macro de manutençao?</string>
    <string name="carga">Você deseja enviar o macro de carga?</string>
    <string name="descarga">Você deseja enviar o macro de descarga?</string>
    <string name="espera">Você deseja enviar o macro de espera?</string>
    <string name="abastecer">Você deseja enviar o macro de abastcer?</string>
    <string name="refeicao">Você deseja enviar o macro de refeição?</string>
    <string name="descanso">Você deseja enviar o macro de descanso?</string>
    <string name="ultrapassagem">Você deseja enviar o macro de trânsito?</string>
    <string name="sair">Você deseja sair?</string>
    <string name="motorista">Você deseja enviar o macro de motorista</string>
    <string name="linear">linear</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_tanque">Status tanque:</string>
    <string name="volume_tanque">Volume tanque:</string>
    <string name="inicio_vistoria">Inicio vistoria:</string>
    <string name="foto_placa_do_veiculo">Foto Placa do veiculo:</string>
    <string name="foto_placa">foto placa do veiculo</string>
    <string name="err_msg_salvar">"Não foi possivel detectar a imagem "</string>
    <string name="msg_salvar">Imagem capturada com sucesso</string>
    <string name="string_title_upload_progressbar_">Enviando para o servidor!</string>
    <string name="coment">Comentário:</string>
    <string name="somente_reboque">Somente Reboque:</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="numero_do_manifesto">Nº do Manifesto:</string>
    <string name="identificador_sistemas_terceiros">Ident. Sistemas Terceiros:</string>
    <string name="conhecimento_transporte">Nº conhecimento transporte:</string>
    <string name="aprovado">Aprovado</string>
    <string name="reprovado">Reprovado</string>
    <string name="indefinido">Indefinido</string>
    <string name="status_do_checklist">Status do checklist</string>
    <string name="erroSemInternet">Falha na conexão</string>
    <string name="erroInternet">Não foi possivel obter a conexão com o servidor!</string>
    <string name="esquemas">Esquemas</string>
    <string name="erro_info_offline">Você está offline, não foi possivel obter essa informação!</string>
    <string name="campos_nao">Alguns campos não foram preenchidos!\n</string>
    <string name="Atencao">Atenção!</string>
    <string name="erro_save_check">Não foi possivel enviar ao servidor!\n O que deseja fazer?</string>
    <string name="send">Envio</string>
    <string name="sucess_send">O Envio foi completado com sucesso!</string>
    <string name="try_again">Tentar enviar novamente!</string>
    <string name="send_later">Salvar e enviar mais tarde!</string>
    <string name="aaaa">DEU ERRADOOOOO</string>
    <string name="placas">Placas</string>
    <string name="you_cant">Você não pode preencher nenhum checklist desse veiculo</string>
    <string name="stat_check">Status do checklist\n</string>
    <string name="ft_placa">Foto da placa do veiculo\n</string>
    <string name="only_rbt">Somente reboque\n</string>
    <string name="assi_img">Assinatura (Certifique-se que apertou o botão salvar)\n</string>
    <string name="fim_vistoria">Fim da vistoria:</string>
    <string name="select_option">Escolha uma opção:</string>
    <string name="nome_aplicacao">Darwin Tablet</string>
    <string name="rotograma">Rotograma</string>
    <string name="jornada">Jornada</string>
    <string name="checklists">CheckLists</string>
    <string name="modelo_teste">Modelo teste</string>
    <string name="logo_darwin">Logo Darwin</string>
    <string name="logotechnolog">LogoTechnolog</string>
    <string name="selecione_o_checklist">Selecione o CheckList:</string>
    <string name="nome_modelo">nome_modelo</string>
    <string name="save">Selecione o checklist salvo anteriormente:</string>
    <string name="select_check_lists">Selecione os CheckLists para enviar:</string>
    <string name="sendCheckTitle">Enviar para o servidor</string>
    <string name="select_all">Selecionar todos</string>
    <string name="Preencher">Preencher</string>
    <string name="Cancel">Cancelar</string>
    <string name="save_send">CheckLists Enviados/Encerrados</string>
    <string name="savedSend">Selecione o checklist enviado anteriormente</string>
    <string name="imagem_de_esquema">Imagem de esquema</string>
    <string name="later_send">Enviar mais tarde</string>
    <string name="checklist_n_o_enviado">CheckList não foi enviado por problemas, mas foi salvo!</string>
    <string name="check_enviado">CheckList enviado ao servidor!</string>
    <string name="check_saved">ChekList Salvo com sucesso!</string>
    <string name="check_enviado_or_enc">Checklist encerrado/enviado!</string>
    <string name="Checklist">Checklist</string>
    <string name="not_info">Sem informações!</string>
    <string name="sem_check">Nenhum Checklist Enviado/Encerrado</string>
    <string name="sem_check_para_enviar">Nenhum Checklist para ser Enviado</string>
    <string name="sem_check_salvo">Nenhum Checklist Salvo</string>

    <!-- TODO: Remove All after -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="autonomia">Autonomia:</string>
    <string name="consumo">Consumo:</string>
    <string name="medi_km_litro">Média KM/Litro:</string>
    <string name="volume_atual">Volume Atual:</string>
    <string name="ultimo_abast">Último abast.:</string>
    <string name="perfil_de_condu_o">Perfil de condução</string>
    <string name="error_info">Não foi possivel obter informações!</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="esqueci_minha_senha">Esqueceu a senha? <a href="www.technolog.com.br">Clique aqui!</a></string>
    <string name="teste"></string>
    <string name="none">Nenhum</string>
    <string name="JornadaMacro">Jornada de Macro</string>
    <string name="kmAtual">Km atual do veículo:</string>
    <string name="engates">engates</string>
    <string name="engate_1">Engate 1</string>
    <string name="engate_2">Engate 2</string>
    <string name="engate_3">Engate 3</string>
</resources>
