<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.com.technolog.checklist.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_option"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnCheckList"
            style="@style/?android:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:text="@string/checklists"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnJornada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:text="@string/jornada"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnJornadaMacro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:text="Macro da Jornada"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnRotograma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:text="@string/rotograma"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textFooterModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/nome_aplicacao"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/usuario_teste_apk_transportes"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/dataTeste"
            android:textColor="@color/colorWhite"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>


</RelativeLayout>
