<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">


    <TextView
        android:id="@+id/textNomeItem"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_toStartOf="@+id/editComentario"
        android:maxLines="4"
        android:maxWidth="100dp"
        android:text="@string/textview"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="normal|bold"/>

    <ImageButton
        android:id="@+id/btnAnexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textNomeItem"
        android:layout_marginEnd="22dp"
        android:background="@null"

        android:contentDescription="@string/capturar_imagem"
        android:src="@drawable/ic_attach_file_blue_900_48dp"
        android:visibility="visible"/>


    <EditText
        android:id="@+id/editComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnAnexo"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/comentarios"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textNomeItem"
        android:layout_below="@+id/btnAnexo"
        android:layout_marginTop="39dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:choiceMode="singleChoice"
            android:text="@string/ok"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/NOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:choiceMode="singleChoice"
            android:text="@string/no_ok"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/Efet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:text="@string/efet"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            />
    </RadioGroup>

    <!--
    <CheckBox
        android:text="Necessita Troca/Reparo?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_below="@+id/btnAnexo"
        android:textColor="@color/colorBlack"
        android:layout_alignStart="@+id/radioGroup"/>
        -->

</RelativeLayout>
