<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.com.technolog.checklist.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btnNewCheck"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_check_circle_white_48dp"
            android:padding="16dp"
            android:text="@string/new_check"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnRecCheck"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_save_white_48dp"
            android:padding="16dp"
            android:text="@string/save_check"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnRecSend"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_send_white_48dp"
            android:padding="16dp"
            android:text="@string/save_send"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnUpload"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_cloud_upload_white_48dp"
            android:padding="16dp"
            android:text="@string/upload"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textFooterModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/m_dulo_check_list"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/usuario_teste_apk_transportes"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/dataTeste"
            android:textColor="@color/colorWhite"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>


</RelativeLayout>
