<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="br.com.technolog.checklist.ListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textFooterModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/m_dulo_check_list"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/usuario_teste_apk_transportes"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textFooterData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/dataTeste"
            android:textColor="@color/colorWhite"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textViewHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_o_checklist"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewHead"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="36dp"
            />

    </RelativeLayout>

</RelativeLayout>
